/*
 *                    GNU LESSER GENERAL PUBLIC LICENSE
 *                        Version 3, 29 June 2007
 *
 *  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
 *  Everyone is permitted to copy and distribute verbatim copies
 *  of this license document, but changing it is not allowed.
 *
 *
 *   This version of the GNU Lesser General Public License incorporates
 * the terms and conditions of version 3 of the GNU General Public
 * License, supplemented by the additional permissions listed below.
 *
 *   0. Additional Definitions.
 *
 *   As used herein, "this License" refers to version 3 of the GNU Lesser
 * General Public License, and the "GNU GPL" refers to version 3 of the GNU
 * General Public License.
 *
 *   "The Library" refers to a covered work governed by this License,
 * other than an Application or a Combined Work as defined below.
 *
 *   An "Application" is any work that makes use of an interface provided
 * by the Library, but which is not otherwise based on the Library.
 * Defining a subclass of a class defined by the Library is deemed a mode
 * of using an interface provided by the Library.
 *
 *   A "Combined Work" is a work produced by combining or linking an
 * Application with the Library.  The particular version of the Library
 * with which the Combined Work was made is also called the "Linked
 * Version".
 *
 *   The "Minimal Corresponding Source" for a Combined Work means the
 * Corresponding Source for the Combined Work, excluding any source code
 * for portions of the Combined Work that, considered in isolation, are
 * based on the Application, and not on the Linked Version.
 *
 *   The "Corresponding Application Code" for a Combined Work means the
 * object code and/or source code for the Application, including any data
 * and utility programs needed for reproducing the Combined Work from the
 * Application, but excluding the System Libraries of the Combined Work.
 *
 *   1. Exception to Section 3 of the GNU GPL.
 *
 *   You may convey a covered work under sections 3 and 4 of this License
 * without being bound by section 3 of the GNU GPL.
 *
 *   2. Conveying Modified Versions.
 *
 *   If you modify a copy of the Library, and, in your modifications, a
 * facility refers to a function or data to be supplied by an Application
 * that uses the facility (other than as an argument passed when the
 * facility is invoked), then you may convey a copy of the modified
 * version:
 *
 *    a) under this License, provided that you make a good faith effort to
 *    ensure that, in the event an Application does not supply the
 *    function or data, the facility still operates, and performs
 *    whatever part of its purpose remains meaningful, or
 *
 *    b) under the GNU GPL, with none of the additional permissions of
 *    this License applicable to that copy.
 *
 *   3. Object Code Incorporating Material from Library Header Files.
 *
 *   The object code form of an Application may incorporate material from
 * a header file that is part of the Library.  You may convey such object
 * code under terms of your choice, provided that, if the incorporated
 * material is not limited to numerical parameters, data structure
 * layouts and accessors, or small macros, inline functions and templates
 * (ten or fewer lines in length), you do both of the following:
 *
 *    a) Give prominent notice with each copy of the object code that the
 *    Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the object code with a copy of the GNU GPL and this license
 *    document.
 *
 *   4. Combined Works.
 *
 *   You may convey a Combined Work under terms of your choice that,
 * taken together, effectively do not restrict modification of the
 * portions of the Library contained in the Combined Work and reverse
 * engineering for debugging such modifications, if you also do each of
 * the following:
 *
 *    a) Give prominent notice with each copy of the Combined Work that
 *    the Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the Combined Work with a copy of the GNU GPL and this license
 *    document.
 *
 *    c) For a Combined Work that displays copyright notices during
 *    execution, include the copyright notice for the Library among
 *    these notices, as well as a reference directing the user to the
 *    copies of the GNU GPL and this license document.
 *
 *    d) Do one of the following:
 *
 *        0) Convey the Minimal Corresponding Source under the terms of this
 *        License, and the Corresponding Application Code in a form
 *        suitable for, and under terms that permit, the user to
 *        recombine or relink the Application with a modified version of
 *        the Linked Version to produce a modified Combined Work, in the
 *        manner specified by section 6 of the GNU GPL for conveying
 *        Corresponding Source.
 *
 *        1) Use a suitable shared library mechanism for linking with the
 *        Library.  A suitable mechanism is one that (a) uses at run time
 *        a copy of the Library already present on the user's computer
 *        system, and (b) will operate properly with a modified version
 *        of the Library that is interface-compatible with the Linked
 *        Version.
 *
 *    e) Provide Installation Information, but only if you would otherwise
 *    be required to provide such information under section 6 of the
 *    GNU GPL, and only to the extent that such information is
 *    necessary to install and execute a modified version of the
 *    Combined Work produced by recombining or relinking the
 *    Application with a modified version of the Linked Version. (If
 *    you use option 4d0, the Installation Information must accompany
 *    the Minimal Corresponding Source and Corresponding Application
 *    Code. If you use option 4d1, you must provide the Installation
 *    Information in the manner specified by section 6 of the GNU GPL
 *    for conveying Corresponding Source.)
 *
 *   5. Combined Libraries.
 *
 *   You may place library facilities that are a work based on the
 * Library side by side in a single library together with other library
 * facilities that are not Applications and are not covered by this
 * License, and convey such a combined library under terms of your
 * choice, if you do both of the following:
 *
 *    a) Accompany the combined library with a copy of the same work based
 *    on the Library, uncombined with any other library facilities,
 *    conveyed under the terms of this License.
 *
 *    b) Give prominent notice with the combined library that part of it
 *    is a work based on the Library, and explaining where to find the
 *    accompanying uncombined form of the same work.
 *
 *   6. Revised Versions of the GNU Lesser General Public License.
 *
 *   The Free Software Foundation may publish revised and/or new versions
 * of the GNU Lesser General Public License from time to time. Such new
 * versions will be similar in spirit to the present version, but may
 * differ in detail to address new problems or concerns.
 *
 *   Each version is given a distinguishing version number. If the
 * Library as you received it specifies that a certain numbered version
 * of the GNU Lesser General Public License "or any later version"
 * applies to it, you have the option of following the terms and
 * conditions either of that published version or of any later version
 * published by the Free Software Foundation. If the Library as you
 * received it does not specify a version number of the GNU Lesser
 * General Public License, you may choose any version of the GNU Lesser
 * General Public License ever published by the Free Software Foundation.
 *
 *   If the Library as you received it specifies that a proxy can decide
 * whether future versions of the GNU Lesser General Public License shall
 * apply, that proxy's public statement of acceptance of any version is
 * permanent authorization for you to choose that version for the
 * Library.
 */
package com.github.szgabsz91.morpher.transformationengines.lattice.impl.transformationengine;

import com.github.szgabsz91.morpher.core.io.Serializer;
import com.github.szgabsz91.morpher.core.model.AffixType;
import com.github.szgabsz91.morpher.core.model.FrequencyAwareWordPair;
import com.github.szgabsz91.morpher.core.model.Word;
import com.github.szgabsz91.morpher.core.model.WordPair;
import com.github.szgabsz91.morpher.transformationengines.api.IBidirectionalTransformationEngine;
import com.github.szgabsz91.morpher.transformationengines.api.model.TransformationEngineResponse;
import com.github.szgabsz91.morpher.transformationengines.api.model.TrainingSet;
import com.github.szgabsz91.morpher.transformationengines.lattice.config.LatticeTransformationEngineConfiguration;
import com.github.szgabsz91.morpher.transformationengines.lattice.converters.LatticeTransformationEngineConverter;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.Lattice;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.builders.ILatticeBuilder;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.factories.ComponentFactory;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.nodes.Node;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.rules.Rule;
import com.github.szgabsz91.morpher.transformationengines.lattice.impl.trainingsetprocessor.ITrainingSetProcessor;
import com.github.szgabsz91.morpher.transformationengines.lattice.protocolbuffers.LatticeTransformationEngineMessage;
import com.google.protobuf.Any;
import com.google.protobuf.InvalidProtocolBufferException;

import java.io.IOException;
import java.nio.file.Path;
import java.util.Optional;
import java.util.Set;

import static java.util.stream.Collectors.toSet;

/**
 * Lattice based {@link IBidirectionalTransformationEngine} implementation.
 *
 * @author szgabsz91
 */
public class LatticeTransformationEngine
        implements IBidirectionalTransformationEngine<LatticeTransformationEngineMessage> {

    private boolean unidirectional;
    private AffixType affixType;
    private ITrainingSetProcessor forwardsTrainingSetProcessor;
    private ILatticeBuilder forwardsLatticeBuilder;
    private ITrainingSetProcessor backwardsTrainingSetProcessor;
    private ILatticeBuilder backwardsLatticeBuilder;

    /**
     * Constructor that sets the flag that indicates if the transformation engine is unidirectional or not,
     * the {@link AffixType} it is related to, and builds the required services based on the given configuration.
     *
     * <p>If the transformation engine is unidirectional, it can only transform words and not transform back.</p>
     *
     * @param unidirectional the unidirectional flag
     * @param affixType the {@link AffixType} that this transformation engine is related to
     * @param configuration the configuration of the transformation engine
     */
    public LatticeTransformationEngine(
            final boolean unidirectional,
            final AffixType affixType,
            final LatticeTransformationEngineConfiguration configuration) {
        this.unidirectional = unidirectional;
        this.affixType = affixType;

        this.forwardsTrainingSetProcessor = ComponentFactory.createTrainingSetProcessor(
                configuration.getCostCalculatorType(),
                configuration.getCharacterRepositoryType(),
                configuration.getWordConverterType(),
                configuration.getMaximalContextSize()
        );
        this.forwardsLatticeBuilder = ComponentFactory.createLatticeBuilder(
                configuration.getLatticeBuilderType(),
                configuration.getCharacterRepositoryType(),
                configuration.getWordConverterType()
        );

        if (!unidirectional) {
            this.backwardsTrainingSetProcessor = ComponentFactory.createTrainingSetProcessor(
                    configuration.getCostCalculatorType(),
                    configuration.getCharacterRepositoryType(),
                    configuration.getWordConverterType(),
                    configuration.getMaximalContextSize()
            );
            this.backwardsLatticeBuilder = ComponentFactory.createLatticeBuilder(
                    configuration.getLatticeBuilderType(),
                    configuration.getCharacterRepositoryType(),
                    configuration.getWordConverterType()
            );
        }
    }

    private LatticeTransformationEngine(
            final AffixType affixType,
            final ITrainingSetProcessor forwardsTrainingSetProcessor,
            final ILatticeBuilder forwardsLatticeBuilder) {
        this.unidirectional = true;
        this.affixType = affixType;
        this.forwardsTrainingSetProcessor = forwardsTrainingSetProcessor;
        this.forwardsLatticeBuilder = forwardsLatticeBuilder;
    }

    private LatticeTransformationEngine(
            final AffixType affixType,
            final ITrainingSetProcessor forwardsTrainingSetProcessor,
            final ILatticeBuilder forwardsLatticeBuilder,
            final ITrainingSetProcessor backwardsTrainingSetProcessor,
            final ILatticeBuilder backwardsLatticeBuilder) {
        this.unidirectional = false;
        this.affixType = affixType;
        this.forwardsTrainingSetProcessor = forwardsTrainingSetProcessor;
        this.forwardsLatticeBuilder = forwardsLatticeBuilder;
        this.backwardsTrainingSetProcessor = backwardsTrainingSetProcessor;
        this.backwardsLatticeBuilder = backwardsLatticeBuilder;
    }

    /**
     * Returns a unidirectional {@link LatticeTransformationEngine} using the given components.
     * @param affixType the {@link AffixType} that this transformation engine is related to
     * @param forwardsTrainingSetProcessor the forwards {@link ITrainingSetProcessor}
     * @param forwardsLatticeBuilder the forwards {@link ILatticeBuilder}
     * @return the newly created unidirectional {@link LatticeTransformationEngine}
     */
    public static LatticeTransformationEngine unidirectional(
            final AffixType affixType,
            final ITrainingSetProcessor forwardsTrainingSetProcessor,
            final ILatticeBuilder forwardsLatticeBuilder) {
        return new LatticeTransformationEngine(affixType, forwardsTrainingSetProcessor, forwardsLatticeBuilder);
    }

    /**
     * Returns a bidirectional {@link LatticeTransformationEngine} using the given components.
     * @param affixType the {@link AffixType} that this transformation engine is related to
     * @param forwardsTrainingSetProcessor the forwards {@link ITrainingSetProcessor}
     * @param forwardsLatticeBuilder the forwards {@link ILatticeBuilder}
     * @param backwardsTrainingSetProcessor the backwards {@link ITrainingSetProcessor}
     * @param backwardsLatticeBuilder the backwards {@link ILatticeBuilder}
     * @return the newly created bidirectional {@link LatticeTransformationEngine}
     */
    public static LatticeTransformationEngine bidirectional(
            final AffixType affixType,
            final ITrainingSetProcessor forwardsTrainingSetProcessor,
            final ILatticeBuilder forwardsLatticeBuilder,
            final ITrainingSetProcessor backwardsTrainingSetProcessor,
            final ILatticeBuilder backwardsLatticeBuilder) {
        return new LatticeTransformationEngine(
                affixType,
                forwardsTrainingSetProcessor,
                forwardsLatticeBuilder,
                backwardsTrainingSetProcessor,
                backwardsLatticeBuilder
        );
    }

    /**
     * Returns if the transformation engine is unidirectional, meaning that it can only transform words forwards.
     * @return true if the transformation engine is unidirectional, false otherwise
     */
    public boolean isUnidirectional() {
        return unidirectional;
    }

    /**
     * Returns the {@link AffixType} that this transformation engine relates to.
     * @return the {@link AffixType} that this transformation engine relates to
     */
    @Override
    public AffixType getAffixType() {
        return affixType;
    }

    /**
     * Returns the underlying forwards {@link ITrainingSetProcessor}.
     * @return the underlying forwards {@link ITrainingSetProcessor}
     */
    public ITrainingSetProcessor getForwardsTrainingSetProcessor() {
        return forwardsTrainingSetProcessor;
    }

    /**
     * Returns the underlying forwards {@link ILatticeBuilder}.
     * @return the underlying forwards {@link ILatticeBuilder}
     */
    public ILatticeBuilder getForwardsLatticeBuilder() {
        return forwardsLatticeBuilder;
    }

    /**
     * Returns the underlying backwards {@link ITrainingSetProcessor}.
     * @return the underlying backwards {@link ITrainingSetProcessor}
     */
    public ITrainingSetProcessor getBackwardsTrainingSetProcessor() {
        return backwardsTrainingSetProcessor;
    }

    /**
     * Returns the underlying backwards {@link ILatticeBuilder}.
     * @return the underlying backwards {@link ILatticeBuilder}
     */
    public ILatticeBuilder getBackwardsLatticeBuilder() {
        return backwardsLatticeBuilder;
    }

    /**
     * Returns the number of nodes in the lattice.
     * @return the number of nodes in the lattice
     */
    @Override
    public int size() {
        if (this.unidirectional) {
            return this.forwardsLatticeBuilder.getLattice().size();
        }

        final int forwardsLatticeSize = this.forwardsLatticeBuilder.getLattice().size();
        final int backwardsLatticeSize = this.backwardsLatticeBuilder.getLattice().size();

        return (forwardsLatticeSize + backwardsLatticeSize) / 2;
    }

    /**
     * Returns the optional transformation engine response containing the transformed word forms of the given root form
     * and their probabilities.
     *
     * {@inheritDoc}
     */
    @Override
    public Optional<TransformationEngineResponse> transform(final Word rootForm) {
        final Lattice lattice = this.forwardsLatticeBuilder.getLattice();
        final Node matchingNode = lattice.match(rootForm);
        final Rule rule = matchingNode.getRule();

        if (rule == null) {
            return Optional.empty();
        }

        return Optional.of(TransformationEngineResponse.singleton(rule.transform(rootForm)));
    }

    /**
     * Returns the optional transformation engine response, containing the backwards transformed word forms of
     * the given inflected form and their probabilities.
     *
     * <p>If the transformation engine is unidirectional, {@link UnsupportedOperationException} is thrown.</p>
     *
     * {@inheritDoc}
     */
    @Override
    public Optional<TransformationEngineResponse> transformBack(final Word inflectedForm) {
        if (unidirectional) {
            throw new UnsupportedOperationException("Unidirectional lattice can only transform forwards");
        }

        final Lattice lattice = this.backwardsLatticeBuilder.getLattice();
        final Node matchingNode = lattice.match(inflectedForm);
        final Rule rule = matchingNode.getRule();

        if (rule == null) {
            return Optional.empty();
        }

        return Optional.of(TransformationEngineResponse.singleton(rule.transform(inflectedForm)));
    }

    /**
     * Incorporates the given training set.
     *
     * {@inheritDoc}
     */
    @Override
    public void learn(final TrainingSet trainingSet) {
        final Set<WordPair> wordPairs = trainingSet.getWordPairs()
                .stream()
                .map(FrequencyAwareWordPair::getWordPair)
                .collect(toSet());
        final Set<Rule> inflectionRules = this.forwardsTrainingSetProcessor.induceRules(wordPairs);
        this.forwardsLatticeBuilder.addRules(inflectionRules);

        if (!this.unidirectional) {
            final Set<WordPair> inverseWordPairs = wordPairs
                    .stream()
                    .map(WordPair::inverse)
                    .collect(toSet());
            final Set<Rule> backwardsRules = this.backwardsTrainingSetProcessor.induceRules(inverseWordPairs);
            this.backwardsLatticeBuilder.addRules(backwardsRules);
        }
    }

    /**
     * Converts the state to a message.
     * @return the message
     */
    @Override
    public LatticeTransformationEngineMessage toMessage() {
        final LatticeTransformationEngineConverter latticeTransformationEngineConverter =
                new LatticeTransformationEngineConverter();
        return latticeTransformationEngineConverter.convert(this);
    }

    /**
     * Loads the state from the given message.
     * @param message the message
     */
    @Override
    public void fromMessage(final LatticeTransformationEngineMessage message) {
        final LatticeTransformationEngineConverter latticeTransformationEngineConverter =
                new LatticeTransformationEngineConverter();
        final LatticeTransformationEngine latticeTransformationEngine =
                latticeTransformationEngineConverter.convertBack(message);
        this.unidirectional = latticeTransformationEngine.isUnidirectional();
        this.affixType = latticeTransformationEngine.getAffixType();
        this.forwardsTrainingSetProcessor = latticeTransformationEngine.getForwardsTrainingSetProcessor();
        this.forwardsLatticeBuilder = latticeTransformationEngine.getForwardsLatticeBuilder();
        this.backwardsTrainingSetProcessor = latticeTransformationEngine.getBackwardsTrainingSetProcessor();
        this.backwardsLatticeBuilder = latticeTransformationEngine.getBackwardsLatticeBuilder();
    }

    /**
     * Loads the state from the given message.
     * @param message the message
     * @throws InvalidProtocolBufferException if the provided message is not a
     *                                        {@link LatticeTransformationEngineMessage}
     */
    @Override
    public void fromMessage(final Any message) throws InvalidProtocolBufferException {
        if (!message.is(LatticeTransformationEngineMessage.class)) {
            throw new InvalidProtocolBufferException(
                    "The provided message is not a LatticeTransformationEngineMessage: " + message
            );
        }

        final LatticeTransformationEngineMessage latticeTransformationEngineMessage =
                message.unpack(LatticeTransformationEngineMessage.class);
        this.fromMessage(latticeTransformationEngineMessage);
    }
    
    /**
     * Saves the state to the given file.
     *
     * {@inheritDoc}
     */
    @Override
    public void saveTo(final Path file) throws IOException {
        final LatticeTransformationEngineConverter latticeTransformationEngineConverter =
                new LatticeTransformationEngineConverter();
        final Serializer<LatticeTransformationEngine, LatticeTransformationEngineMessage> serializer =
                new Serializer<>(latticeTransformationEngineConverter, this);
        serializer.serialize(this, file);
    }

    /**
     * Loads the state from the given file.
     *
     * {@inheritDoc}
     */
    @Override
    public void loadFrom(final Path file) throws IOException {
        final LatticeTransformationEngineConverter latticeTransformationEngineConverter =
                new LatticeTransformationEngineConverter();
        final Serializer<LatticeTransformationEngine, LatticeTransformationEngineMessage> serializer =
                new Serializer<>(latticeTransformationEngineConverter, this);
        final LatticeTransformationEngine latticeTransformationEngine = serializer.deserialize(file);
        this.unidirectional = latticeTransformationEngine.isUnidirectional();
        this.affixType = latticeTransformationEngine.getAffixType();
        this.forwardsTrainingSetProcessor = latticeTransformationEngine.getForwardsTrainingSetProcessor();
        this.forwardsLatticeBuilder = latticeTransformationEngine.getForwardsLatticeBuilder();
        this.backwardsTrainingSetProcessor = latticeTransformationEngine.getBackwardsTrainingSetProcessor();
        this.backwardsLatticeBuilder = latticeTransformationEngine.getBackwardsLatticeBuilder();
    }

}
